# 0,1,0,20201117
	Max like selection key map added for particle edit mode(Max mode only).
	Hair guide from curve step_key counts issue fixed.
	Node editor 3DsMax like selection short keys (Max mode only).
	Node editor 'H' and 'Ctrl + H' actions swapped for 3DsMax mode.

# 0,1,0,20201111
	Weight paint to vertex paint convertor added (for now search for "Weight to Vertex Color").
	Create Curve from hair guide tool added (for now search for "Hair Guides To Curve")

# 0,1,0,20201106
	Hair guide from Curve operator added (for now select mesh search "Hair Guides From Curve" and pick Curve)
	A Simple Camera lister added (Menu: Render > Camera Lister)

# 0,1,0,20201101
	Character lister added (for now very simple stuff but in time other tools will be add)
	Mesh edit mode 'Ctrl + M' Subdivid/MSmooth selected faces (Max mode only)

# 0,1,0,20201029
	Atach picked object in Edit mode like 3DsMax`s edit poly attach (object mode and Edit mode in Quad menu).
	Same Attach function added for Curve & Armature too.
	ObjectPicker Operator updated.
	Pivot to First Bezier point issue fixed (Ctrl + Insert in set pivot point menu).
	Bugfix.

# 0,1,0,20201028
	Default auto smooth fixed for Torus, Teapot, Monkey primitives.
	Bugfix.

# 0,1,0,20201026 and befor
	Align Objects has better UI and able to Align Objects to Bone of Armature too.
	Primitive Geometries create and update with Shade Smooth active.
	Join (ctrl+J) clear primitive data now.
	Object display setiing assined to 'Alt+X'.
	Path Sort Operator updated (Select objects call the operator then pick path)
	PickOperator bug fixed.
	Linkto Operator now can link Object directly to a bone.
	PickOperator updated, now can return source, subsource, target and subtarget.
	New Hotkeys added to weight paint and File Browser (Max mode only).
	Camera search any object display filter toggle Keymaps added for paint/sculp modes too.
	Timeline Red header issue fixed.